--- a/variables2.html
+++ b/variables2.html
@@ -54,7 +54,7 @@
 
     <script>
     const pi = 3.14;
-    let person = "Saurabh";
+    let person = "Mahee";
     let answer = 'Yes I am!';
 
     document.getElementById("demo2").innerHTML = pi + "<br>" + person + "<br>" + answer;
